fixed logo on tablet and mobile

--- a/app/less/default/modules/header.less
+++ b/app/less/default/modules/header.less
@@ -20,8 +20,8 @@
         right: 0;
     }
 
-    .logo {
-        top: 254px;
+    .logo-top {
+        top: 255px;
         position: relative;
     }
 
