--- a/app/less/default/modules/navbar.less
+++ b/app/less/default/modules/navbar.less
@@ -64,6 +64,7 @@ nav.navbar {
 }
 
 .navbar-brand {
+    display: none;
     margin-bottom: 5px;
     margin-top: 5px;
     padding: 0;
