--- a/app/less/mobile/modules/header.less
+++ b/app/less/mobile/modules/header.less
@@ -6,4 +6,11 @@
 
 .header {
 
+    .brand {
+        margin-top: 20px;
+        margin-left: 20px;
+
+        svg { height: 45px; }
+    }
 }
+
