--- a/app/less/tablet/modules/header.less
+++ b/app/less/tablet/modules/header.less
@@ -6,4 +6,11 @@
 
 .header {
 
+    .brand {
+        margin-top: 20px;
+        margin-left: 40px;
+
+        svg { height: 45px; }
+    }
+
 }
