--- a/app/less/tablet/modules/navbar.less
+++ b/app/less/tablet/modules/navbar.less
@@ -34,6 +34,10 @@ nav.navbar {
         }
     }
 
+    .nav-open & .navbar-brand {
+        display: block;
+    }
+
     // hide nav icons
     li a i {
         display: none;
